--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: go
-os:
-  - osx
 go:
   - master
 services:
@@ -8,3 +6,5 @@ services:
 before_script:
   - psql -c 'CREATE DATABASE food_test;' -U postgres
   - psql food_test < food.sql
+addons:
+  postgresql: "10"
