--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,10 @@ before_script:
   - psql food_test < food.sql
   addons:
     postgresql = "10"
+    apt:
+    packages:
+    - postgresql-10
+    - postgresql-client-10
+  env:
+    global:
+    - PGPORT=5433
