--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
 services:
   - postgresql
 addons:
-  postgresql: "10"
+  postgresql: "10"git
   apt:
     packages:
       - postgresql-10
@@ -13,3 +13,6 @@ dist: trusty
 before_script:
   - psql -c 'CREATE DATABASE food_test;' -U postgres
   - psql food_test < food.sql
+env:
+  global:
+  - PGPORT=5433
