edited travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,17 @@ go:
   - master 
 script: ./run-api.sh
 services:
-  - postgres
+  - postgresql
 before_script:
   - psql -c 'create database food_test;' -U postgres
   - psql food_test < food.sql
   addons:
-    postgresql = "10"
+    postgresql : "10"
     apt:
-    packages:
-    - postgresql-10
-    - postgresql-client-10
-  env:
-    global:
+      packages:
+        - postgresql-10
+        - postgresql-client-10
+dist: trusty
+env:
+  global:
     - PGPORT=5433
