--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,7 @@ env:
   global:
   - PGPORT=5433
   - PGPASSWORD=""
+before_install:
+  - sudo sed -i -e 'local.*peer/s/postgres/all' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
+  - sudo service postgresql restart
+  - sleep 1
