fix typos in travis yml config

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ env:
   - PGPORT=5433
   - PGPASSWORD=""
 before_install:
-  - sudo sed -i -e 'local.*peer/s/postgres/all' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
+  - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
   - sudo service postgresql restart
   - sleep 1
