--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 go:
-  - master 
+  - master
 services:
   - postgresql
 addons:
@@ -11,8 +11,13 @@ addons:
       - postgresql-client-10
 dist: trusty
 before_script:
-  - psql -c 'create database food_test;' -U postgres
+  - psql -c 'CREATE DATABASE food_test;' -U postgres
   - psql food_test < food.sql
 env:
   global:
-    - PGPORT=5433
+  - PGPORT=5433
+  - PGPASSWORD=""
+before_install:
+  - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
+  - sudo service postgresql restart
+  - sleep 1
