--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ before_script:
   - psql food_test < food.sql
 env:
   global:
-  - PGPORT=5433
-  - PGPASSWORD=""
+  - DEPLOYENV="ci"
 before_install:
   - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
   - sudo service postgresql restart
