removed quotes for the db name

--- a/app.yml
+++ b/app.yml
@@ -2,9 +2,9 @@ dev:
   PGUSERNAME: "postgres"
   PGPASSWORD: "postgres"
   PGPORT: 5432
-  DBNAME: "food_test"
+  DBNAME: food_test
 ci:
   PGUSERNAME: "postgres"
   PGPASSWORD: ""
   PGPORT: 5433
-  DBNAME: "food_test"
+  DBNAME: food_test
